--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    margin: 0 2rem; /* Ajusta el margen según sea necesario */
+    margin: 0 2rem; 
     padding: 2rem;
     padding-bottom: 5rem;
 }
@@ -106,7 +106,7 @@ header {
 .about-content {
     flex: 1 1 50%;
     min-width: 300px;
-    margin-right: 1rem; /* Ajusta el margen según sea necesario */
+    margin-right: 1rem; 
     margin-left: 6rem;
 }
 
@@ -131,9 +131,9 @@ header {
 .about-image {
     flex: 1 1 33%;
     min-width: 300px;
-    margin-left: auto; /* Mueve la imagen al margen derecho */
+    margin-left: auto; 
     display: flex;
-    justify-content: flex-end; /* Asegura la alineación hacia la derecha */
+    justify-content: flex-end; 
 }
 
 .about-image img {
@@ -148,17 +148,17 @@ header {
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .about {
-        flex-direction: column; /* Asegura que los elementos se apilen en pantallas más pequeñas */
+        flex-direction: column; 
         align-items: center;
     }
 
     .about-image {
-        margin-left: 0; /* Resetea el margen para que quede centrado en pantallas más pequeñas */
-        justify-content: center; /* Centra la imagen */
+        margin-left: 0; 
+        justify-content: center; 
     }
 
     .about-content {
-        margin-right: 0; /* Resetea el margen para centrar el contenido en pantallas más pequeñas */
+        margin-right: 0; 
     }
 }
 
